--- a/global-config/bootstrap-a/managed-setup.yaml
+++ b/global-config/bootstrap-a/managed-setup.yaml
@@ -2,19 +2,18 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: managed-setup-a-<name>
+  name: managed-setup-a-4
   namespace: openshift-operators
 spec:
   destination:
     namespace: openshift-operators
     server: https://kubernetes.default.svc
-  project: project-sno-<name>
+  project: project-sno-4
   source:
-    repoURL: https://github.com/<your_user>/workshop-gitops-content-deploy.git
-    targetRevision: sno-<name>-setup
+    repoURL: https://github.com/borjareinares/workshop-gitops-content-deploy.git
+    targetRevision: sno-4-setup
     path: cluster-addons/cluster-addons-as/
   syncPolicy:
     automated:
       prune: true
       selfHeal: true
-
